--- a/style.css
+++ b/style.css
@@ -1,89 +1,147 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 body {
-            background-color: #091921;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
+    background-color: #091921;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
 
-        .clock {
-            height: 350px;
-            width: 350px;
-            background: url(clock.png);
-            background-size: cover;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50%;
-            border: 4px solid #091921;
-            box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
-                inset 0 -15px 15px rgba(255, 255, 255, 0.05),
-                0 15px 15px black,
-                inset 0 15px 15px black;
-        }
+.clock {
+    height: 350px;
+    width: 350px;
+    background: url(clock.png);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border: 4px solid #091921;
+    box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
+        inset 0 -15px 15px rgba(255, 255, 255, 0.05),
+        0 15px 15px black,
+        inset 0 15px 15px black;
+}
 
-        .clock::before {
-            content: " ";
-            height: 20px;
-            width: 20px;
-            position: absolute;
-            background: white;
-            border-radius: 50%;
-            z-index: 100;
-        }
+.clock::before {
+    content: " ";
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    background: white;
+    border-radius: 50%;
+    z-index: 100;
+}
 
-        .hour,
-        .min,
-        .sec {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-            border-radius: 50%;
-        }
+.hour,
+.min,
+.sec {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    border-radius: 50%;
+}
 
-        .hour {
-            width: 160px;
-            height: 160px;
-        }
+.hour {
+    width: 160px;
+    height: 160px;
+}
 
-        .hour::before {
-            content: " ";
-            background: #ff105e;
-            height: 80px;
-            width: 8px;
-            z-index: 30;
-            border-radius: 6px 6px 0 0;
-            transform: translateY(-35px);
-        }
+.hour::before {
+    content: " ";
+    background: #ff105e;
+    height: 80px;
+    width: 8px;
+    z-index: 30;
+    border-radius: 6px 6px 0 0;
+    transform: translateY(-35px);
+}
 
-        .clock .min {
-            width: 190px;
-            height: 190px;
-        }
+.clock .min {
+    width: 190px;
+    height: 190px;
+}
 
-        .min::before {
-            content: " ";
-            background: white;
-            height: 120px;
-            width: 4px;
-            z-index: 32;
-            border-radius: 6px 6px 0 0;
-            transform: translateY(-50px);
-        }
+.min::before {
+    content: " ";
+    background: white;
+    height: 120px;
+    width: 4px;
+    z-index: 32;
+    border-radius: 6px 6px 0 0;
+    transform: translateY(-50px);
+}
 
-        .clock .sec {
-            width: 230px;
-            height: 230px;
-        }
+.clock .sec {
+    width: 230px;
+    height: 230px;
+}
 
-        .sec::before {
-            content: " ";
-            background: white;
-            height: 150px;
-            width: 2px;
-            z-index: 34;
-            border-radius: 6px 6px 0 0;
-            transform: translateY(-50px);
-        }
+.sec::before {
+    content: " ";
+    background: #03b1ff;
+    height: 150px;
+    width: 2px;
+    z-index: 34;
+    border-radius: 6px 6px 0 0;
+    transform: translateY(-50px);
+}
+
+/* Light Mode's work start from here  */
+
+.light-mode{
+    background-color:#e2dfdf;
+}
+.light-mode .clock{
+    border: 4px solid #f3f3f3;
+    box-shadow: 0 -15px 15px rgba(92, 85, 85, 0.05),
+        inset 0 -15px 15px rgba(104, 99, 99, 0.05),
+        0 15px 15px rgb(136, 133, 133),
+        inset 0 15px 15px rgb(126, 121, 121);
+}
+.light-mode .min::before{
+    background: black;
+}
+
+.toggleClass{
+    position: absolute;
+    top: 50px;
+    left: 105px;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: #d1dae2;
+    cursor: pointer;
+}
+
+.toggleClass::before{
+    content: "Light Mode";
+    white-space: nowrap;
+    color: white;
+    font-family: cursive;
+    position: absolute;
+    left: 25px;
+}
+
+.light-mode .toggleClass{
+    background: #091921;
+}
+
+.light-mode .toggleClass::before{
+    content: "Dark Mode";
+    color: #091921;
+}
+
+.light-mode .clock::before {
+    content: " ";
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    background: white;
+    border-radius: 50%;
+    z-index: 100;
+}
