--- a/style.css
+++ b/style.css
@@ -110,9 +110,9 @@ body {
 .toggleClass{
     position: absolute;
     top: 50px;
-    left: 105px;
-    height: 20px;
-    width: 20px;
+    left: 105px; 
+    height: 26px;
+    width: 26px;
     border-radius: 50%;
     background-color: #d1dae2;
     cursor: pointer;
@@ -121,10 +121,12 @@ body {
 .toggleClass::before{
     content: "Light Mode";
     white-space: nowrap;
+    word-spacing: 3px;
     color: white;
+    font-size:20px;
     font-family: cursive;
     position: absolute;
-    left: 25px;
+    left: 35px;
 }
 
 .light-mode .toggleClass{
